# QtTemplate

./: CMakeLists.txt  main.cpp  mainWindow.cpp  mainWindow.h
